[package]
name = "gl-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
freetype-rs = {version ="*",features = ["bundled"]}
gl = "*"
json = "*"
xml-rs = "*"
glam = "*"
rusty_spine = "*"
array-init = "*"
image = "*"
rand = "*"
guillotiere = "*"
paste = "*"
gltf = "*"


[dependencies.glfw]
version = "*"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9",features = ["sysinfoapi"]}

